k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '4000'
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
